# Multi-Agent-Text2Sql-RAG-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: configs.yaml
scripts/: check_db.py  db_init.py  scrape_docs.py
src/: app.py  config.py  monitoring.py  rag_agent.py  test_rag.py  text2sql_agent.py  vllm_manager.py
